correct spacing around share compoanent

--- a/_sass/modules/_share.scss
+++ b/_sass/modules/_share.scss
@@ -1,5 +1,5 @@
 .share {
-  margin-top: 5.4rem;
+  margin-top: 5.4rem 0 3.6rem;
 }
 
 .share__btn {
